--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,31 @@
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: #181818;
+  /* color: white; */
+}
+@layer components {
+  .text {
+    @apply border-2 border-white text-white mt-4 ml-20;
+  }
+  .center {
+    @apply flex flex-col items-center justify-center;
+  }
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body {
-  background-color: black;
-}
